[package]
name = "crusher"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-channel = "2.1"
async-trait = "0.1"
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.13", features = ["toml"], default-features = false }
directories = "5.0"
giganto-client = { git = "https://github.com/aicers/giganto-client.git", tag = "0.15.1" }
lazy_static = "1"
num_enum = "0.7"
num-traits = "0.2"
oinq = { git = "https://github.com/petabi/oinq.git", tag = "0.10.0" }
quinn = "0.10"
roxy = { git = "https://github.com/aicers/roxy.git", tag = "0.2.1" }
rustls = "0.21"
rustls-pemfile = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
x509-parser = "0.15"

[dev-dependencies]
lazy_static = "1"
