[package]
name = "crusher"
version = "0.6.4"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-channel = "2"
async-trait = "0.1"
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", features = ["toml"], default-features = false }
giganto-client = { git = "https://github.com/aicers/giganto-client.git", rev = "3c9a505" }
num_enum = "0.7"
num-traits = "0.2"
quinn = { version = "0.11", features = ["ring"] }
review-protocol = { git = "https://github.com/petabi/review-protocol.git", features = [
    "client",
], tag = "0.11.0" }
roxy = { git = "https://github.com/aicers/roxy.git", tag = "0.4.0" }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.clippy]
pedantic = "warn"
